k8s/vijaya-gatewayclass.yaml
# gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: traefik-vijaya
spec:
  controllerName: traefik.io/gateway-controller
