k8s/vijaya-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: vijaya-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template: 
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      volumes: 
        - name: postgres-storage
          persistentVolumeClaim: 
            claimName: vijaya-postgres-pvc
