k8s/vijaya-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: vijaya-redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels: 
       app: redis
  template:
    metadata:
       labels:
         app: redis
    spec:
      containers:
          - name: redis
            image: redis-workflow-kube:latest
            ports:
               - containerPort: 6379
