k8s/vijaya-result-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: vijaya-result-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result 
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result
        image: result-workflow-kube
        ports:
          - containerPort: 80
