k8s/vijaya-vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: vijaya-vote-deployment
spec:
  replicas: 1
  selector: 
     matchLabels:
       app: vote 
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: vote-workflow-kube:af19447
          ports:
          - containerPort: 80
