k8s/vijaya-worker-deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
   name: vijaya-worker-deployment
spec: 
   replicas: 1
   selector: 
      matchLabels:
        app: worker 
   template:
      metadata:
        labels:
          app: worker
      spec:
        containers:
          - name: worker
            image: worker-workflow-kube
            ports:
            - containerPort: 80
