k8s/vijaya-redis-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: vijaya-redis-service
spec: 
  type: ClusterIP
  selector: 
      app: redis
  ports:
      - port: 6379
        targetPort: 6379
