k8s/vijaya-result-services.yaml
apiVersion: v1 
kind: Service 
metadata:
   name: vijaya-result-service
spec:
   selector:
     app: result
   ports:
     - port: 80
       targetPort: 80
       protocol: TCP
   type: ClusterIP
