k8s/vijaya-vote-services.yaml
apiVersion: v1 
kind: Service 
metadata:
   name: vijaya-vote-service
spec:
   selector:
     app: vote
   ports:
     - port: 80
       targetPort: 80
       protocol: TCP
   type: ClusterIP
