k8s/vijaya-worker-service.yaml
apiVersion: v1 
kind: Service 
metadata:
   name: vijaya-worker-service
spec: 
  selector:
    app: worker
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
