k8s/vijaya-result-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: result-route
  namespace: vijaya-micro-kube
spec:
  parentRefs:
    - name: vijaya-gateway
  hostnames:
    - "app.vijaya.result.diogohack.shop"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vijaya-result-service
          port: 8080
