k8s/vijaya-vote-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vote-route
  namespace: vijaya-micro-kube
spec:
  parentRefs:
    - name: vijaya-gateway
  hostnames:
    - "app.vijaya.vote.diogohack.shop"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vijaya-vote-service
          port: 8080
